--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am 32 years old and i recently moved in NC from NY. The change is pace is a mutch welcomed change.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in the United Kingdom however i grew up in Cyprus from the age of three untill i moved to the US back in 2011</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Everything ouitdoors. particularly hunting and fishing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream jog growing up was to become a veterinarian</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Raleigh</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Learining a new language is always chanlanging and becoming a webdeveloper is no different. I am eager to become a web developer since the world in which we live in is going to be fully automated which will mean more demand for skilled tech personel</p>
     </section>
 
     <footer id="footer">
